# cpm

./: .dockerignore  .gitattributes  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml  coverage.yml  docs.yml  pr-checks.yml  release.yml  security.yml  setup-branch-protection.yml
docs/: README.md  contributing.md  docker.md
docs/guides/: README.md  cli-reference.md  cpm-package-manager.md
examples/: README.md
examples/basic-js-project/: index.js  package.json
examples/hybrid-project/: Cargo.toml  index.js  package.json
examples/hybrid-project/src/: lib.rs
examples/simple-crud/: index.js  package.json
packaging/: cpm.nuspec  cpm.rb
packaging/chocolatey/tools/: chocolateyInstall.ps1
scripts/: docker-build.ps1  docker-build.sh  install.ps1  install.sh
src/: easter_egg.rs  lib.rs  templates.rs
src/cli/: mod.rs
src/cli/framework/: base.rs  error.rs  mod.rs
tests/: prod_readiness_tests.rs
